--- a/AssignmentToken/app/src/main/res/layout/activity_scan_barcode.xml
+++ b/AssignmentToken/app/src/main/res/layout/activity_scan_barcode.xml
@@ -7,13 +7,13 @@
     tools:context=".ScannerBarcodeActivity">
 
     <SurfaceView
-        android:id="@+id/surfaceView"
+        android:id="@+id/surface_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
 
 
     <TextView
-        android:id="@+id/txtBarcodeValue"
+        android:id="@+id/txt_barcode_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
